--- a/instatour/index.html
+++ b/instatour/index.html
@@ -453,6 +453,13 @@
     </div>
 
     <div class = "container-fluid" id = "howto">
+        <div class = "separator-top">
+            <img src = "img/separator-top.png">
+        </div>
+         <div class = "separator-bottom">
+            <img src = "img/separator-bottom.png">
+        </div>
+
         <div class = "container">
             <div class = "section-heading w">
                 Как записаться на тур:
@@ -731,7 +738,7 @@
                 </div>
             </div>
 
-            <div class = "section-heading w">
+            <div class = "section-heading w mobile-p">
                 Остались вопросы?
             </div>
 
