--- a/instatour/index.html
+++ b/instatour/index.html
@@ -73,7 +73,14 @@
                 Какие достопримечательности вы увидите:
             </div>
 
+            <div class = "wys-arrow wys-arrow-prev">
+                    <i class = "fa fa-angle-left"></i>
+                </div>
+            <div class = "wys-arrow wys-arrow-next">
+                    <i class = "fa fa-angle-right"></i>
+                </div>
             <div class = "wys-container">
+
                 <div class = "wys-item">
                     <div class = "wys-img">
                         <img src = "img/baku-2337485.jpg">
