--- a/instatour/index.html
+++ b/instatour/index.html
@@ -36,6 +36,9 @@
             <div class = "header-date">
                 21 мая - 26 мая
             </div>
+            <div class = "header-date">
+                10 июня - 16 июня
+            </div>
             <div class = "header-button to-tour">
                 Записаться на тур
             </div>
@@ -733,7 +736,7 @@
             </div>
 
             <div class = "last-s-title">
-На 8 дней
+На 6 дней
             </div>
 
             <div class = "last-tarif d-flex flex-row jc-center ai-center">
