--- a/instatour/index.html
+++ b/instatour/index.html
@@ -34,10 +34,7 @@
                 Инстатур
             </div>
             <div class = "header-date">
-                21 мая - 26 мая
-            </div>
-            <div class = "header-date">
-                10 июня - 16 июня
+                21 мая - 26 мая, 10 июня - 16 июня
             </div>
             <div class = "header-button to-tour">
                 Записаться на тур
