--- a/instatour/index.html
+++ b/instatour/index.html
@@ -658,7 +658,7 @@
             </div>
 
             <div class = "section-heading b mt">
-                Что не входит в стоимость:
+                Что не входит <br> в стоимость:
             </div>
 
             <div class = "cost-not-items">
