--- a/instatour/index.html
+++ b/instatour/index.html
@@ -4,20 +4,8 @@
         <title>Instatour</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href = "css/flex.css" rel = "stylesheet">
-        <link href = "css/slick.css" rel = "stylesheet">
-        <link href = "css/font-awesome.min.css" rel = "stylesheet">
-        <link href = "css/main.css" rel = "stylesheet">
-        <link href = "css/header.css" rel = "stylesheet">
-        <link href = "css/whytour.css" rel = "stylesheet">
-        <link href = "css/whatyousee.css" rel = "stylesheet">
-        <link href = "css/live.css" rel = "stylesheet">
-        <link href = "css/transport.css" rel = "stylesheet">
-        <link href = "css/team.css" rel = "stylesheet">
-        <link href = "css/wyw.css" rel = "stylesheet">
-        <link href = "css/howto.css" rel = "stylesheet">
-        <link href = "css/cost.css" rel = "stylesheet">
-        <link href = "css/last.css" rel = "stylesheet">
+        <link href = "css/all-min.css" rel = "stylesheet">
+
 
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src = "js/slick.min.js"></script>
