--- a/instatour/index.html
+++ b/instatour/index.html
@@ -4,6 +4,7 @@
         <title>Instatour</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link href = "css/font-awesome.min.css" rel = "stylesheet">
         <link href = "css/all-min.css" rel = "stylesheet">
 
 
