--- a/instatour/index.html
+++ b/instatour/index.html
@@ -749,8 +749,8 @@
 
     <footer class = "d-flex ai-center">
         <div>
-            <a href = "#"><i class = "fa fa-facebook"></i></a>
-            <a href = "#"><img src = "img/instagram.png"></a>
+            <a href = "https://www.facebook.com/mirposmotrel/"><i class = "fa fa-facebook"></i></a>
+            <a href = "https://www.instagram.com/mirposmotrel/"><img src = "img/instagram.png"></a>
         </div>
         <a href = "tel:+79319779155" class = "tel">+7 (931) 977-91-55</a>
     </footer>
