--- a/instatour/index.html
+++ b/instatour/index.html
@@ -40,7 +40,7 @@
                 Зачем ехать в инстатур?
             </div>
 
-            <img src = "img/whytour-cards.png">
+            <img src = "img/whytour-cards.jpg">
         </div>
     </div>
 
@@ -266,7 +266,7 @@
                 Ваш маршрут
             </div>
             <div class = "map-map">
-                <img src = "img/map.png">
+                <img src = "img/map.jpg">
             </div>
         </div>
         <div class = "map-lupe">
