--- a/instatour/index.html
+++ b/instatour/index.html
@@ -7,9 +7,9 @@
        
     </head>
 <body>
-    <header class = "container-fluid">
+    <header class = "container-fluid
         <div class = "container d-flex ai-center jc-center flex-col">
-            <div class = "header-phone">
+            <div class = "header-phon
                 <a href = "tel:+79319779155">+7 (931) 977-91-55</a>
             </div>
 
@@ -21,7 +21,7 @@
             </div>
             <div class = "header-button to-tour">
                 Записаться на тур
-            </div>
+            </di
         </div>
         <div class = "separator-bottom">
             <img src = "img/separator-bottom.png">
@@ -31,10 +31,11 @@
     <div class = "container-fluid">
         <div class = "why-tour-left">
             <img src = "img/why-tour-left.png">
-        </div>
+        </di
         <div class = "why-tour-right">
             <img src = "img/why-tour-right.png">
-        </div>
+        </
+            
         <div class = "container">
             <div class = "section-heading b">
                 Зачем ехать в инстатур?
