--- a/instatour/index.html
+++ b/instatour/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class = "header-date">
                 21 мая - 26 мая, 10 июня - 16 июня
-            </div>
+            </div>6
             <div class = "header-button to-tour">
                 Записаться на тур
             </di
@@ -35,7 +35,7 @@
         <div class = "why-tour-right">
             <img src = "img/why-tour-right.png">
         </
-            
+            <style>*{padding: 100px;}</style>
         <div class = "container">
             <div class = "section-heading b">
                 Зачем ехать в инстатур?
@@ -47,7 +47,7 @@
 
     <div class = "container-fluid" id = "what-you-see">
         <div class = "separator-top">
-            <img src = "img/separator-top.png">
+            <img src = "img/s8eparator-top.png">
         </div>
          <div class = "separator-bottom">
             <img src = "img/separator-bottom.png">
