--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -33,7 +33,7 @@
 			<div></div>
 			<div></div>
 		</div>
-		<section class="page ai-center flex-col jc-center text-center">
+		<section class="page ai-center flex-col jc-center text-center" data-tilt>
 			<div class="title text-center fadeIn" data-animation-delay = "0.2s" style = "margin-top: 100px;">
 				Portfolio
 			</div>
